--- a/admin/css/hermescalculator-admin.css
+++ b/admin/css/hermescalculator-admin.css
@@ -569,3 +569,8 @@ p.error_msg {
 div#postbox-container-1 {
    visibility: hidden !important;
 }
+.hermeshLogo {
+    background: #fff;
+    margin-bottom: 4px;
+    text-align: center;
+}
